tests/tests/integration_tests/snapshots/integration_tests__transaction_tests__get_transaction-0-transaction.snap
---
source: tests/tests/integration_tests/transaction_tests.rs
assertion_line: 43
expression: parsed_transaction
---
{
  "signature": "4gmMdnaUkDUySPtv7W3WdyPAnLtHrE4dfwkcZtGm9QCNxKNNx2RbwgATDyM95bS9V3GMbpKu3pab1XPcKvSgtDmN",
  "slot": 317418346,
  "error": null,
  "blocktime": "2024-08-08T17:53:33Z"
}
