tests/tests/integration_tests/snapshots/integration_tests__transaction_tests__get_transaction-1-transaction.snap
---
source: tests/tests/integration_tests/transaction_tests.rs
assertion_line: 46
expression: parsed_transaction
---
{
  "signature": "HZvnxabnQU2kGQEV82VbEtowfxudPbp86C6vMXppAfVRvJzA5A4rvj5vET1vppLPywuFSkg7GiTyGmnNoRcXnba",
  "slot": 289867138,
  "error": "Error processing Instruction 2: Program failed to complete",
  "blocktime": "2024-04-03T20:22:39Z"
}
