tests/tests/integration_tests/snapshots/integration_tests__transaction_tests__get_transaction_by_address-1-transaction-mint.snap
---
source: tests/tests/integration_tests/transaction_tests.rs
assertion_line: 128
expression: parsed_transaction
---
{
  "total": 10,
  "limit": 1000,
  "page": 1,
  "items": [
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "FDtzHvo68TiRiWB7sU5KkEGy8HGnNcYS8qL7pGqqPmm8",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "GbzStFtfsNnmFZwN4kjnw1mdL1j7LLqytnNG2S7JzRjD",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4414000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "2ZvjfKaZ1NXBJkiUr8CtFuj4sEgJ6ZpdeXqGeibeywbS",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "8aLY411CVT7c5XvHuhHEjjiNovFCHPpG4LBPZf3j7n3W",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4985000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "Hzc3UttLN9adzwp5E2aSxS45M3yr1YtUe6FCoUhReEhr",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "9JbBh5eWsCxe8c2uTqKrdn2DsgYi42oPFmmMPqVW5xSa",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4608000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "Fqq7NJ8wGKdUWRRjmiG4ji5Yj3hDCtLJEScL38v3ZhAr",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "3fYnstV48cLJ5sDKwgn23M41D31AFFQGLBwA2WqYTMBZ",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4424000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "6DFQNm6HeUeZJLdE4e6uTgJvoXxjQXzhYWhghYnPbBbd",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "GAmRE9hhZyrhtxw3zM6Dz4vBM7j317r2sMkAdade1HVV",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4629000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "7PH1GsynHT4iYeKxtxXyEtfTvwurwc3HWtJ9ewyGDzbx",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "J8csZFUdqzUfUjAo4CTxLgbwDGi3hAkjjwStEKKyh2y5",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4186000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "6J8b5gaqbnkRZMnbiHWmjJheNy8fSrm3znhh8HrD1JT6",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "BgSq5v97BF5WVYByG9H8C15HEvmRLkpkBdZrG5CMQwVQ",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4204000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "9mTZnUvJsUepQpKjFvracMnRD9DwamvEcZ9Dva654y4r",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "G4MDdmDPpQnWFVgMzcyEQfDPonoe6bjaNRBeGHUd6Bar",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4740000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "GLAsLY6YFb1Cb6ZBBHFcPsJzxzKeWoxUQUUB8tDgGS3q",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "AjamdEXjExHJS181nFN83sddXhLrdn1isYXTrViazcHz",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4318000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "4HHZV2LRBQD5CJnYgMTzPeKcS2nnTT8szeh2svBWQ89m",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "EhTeYCaeFcShDi7cy496Mzcnj24P1TKbbwjDCm6wVk8g",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4999000000000,
      "block_time": "2024-08-26T12:02:50Z"
    }
  ]
}
