tests/tests/integration_tests/snapshots/integration_tests__transaction_tests__get_transaction_by_address-1-transaction-unknown.snap
---
source: tests/tests/integration_tests/transaction_tests.rs
assertion_line: 107
expression: parsed_transaction
---
{
  "total": 0,
  "limit": 1000,
  "page": 1,
  "items": []
}
