tests/tests/integration_tests/snapshots/integration_tests__transaction_tests__get_transaction_by_address-1-transaction-with-dest.snap
---
source: tests/tests/integration_tests/transaction_tests.rs
assertion_line: 65
expression: parsed_transaction
---
{
  "total": 1,
  "limit": 1000,
  "page": 1,
  "items": [
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "4HHZV2LRBQD5CJnYgMTzPeKcS2nnTT8szeh2svBWQ89m",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "EhTeYCaeFcShDi7cy496Mzcnj24P1TKbbwjDCm6wVk8g",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4999000000000,
      "block_time": "2024-08-26T12:02:50Z"
    }
  ]
}
