tests/tests/integration_tests/snapshots/integration_tests__transaction_tests__get_transaction_by_address-1-transaction-with-page.snap
---
source: tests/tests/integration_tests/transaction_tests.rs
assertion_line: 86
expression: parsed_transaction
---
{
  "total": 5,
  "limit": 5,
  "page": 2,
  "items": [
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "7PH1GsynHT4iYeKxtxXyEtfTvwurwc3HWtJ9ewyGDzbx",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "J8csZFUdqzUfUjAo4CTxLgbwDGi3hAkjjwStEKKyh2y5",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4186000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "6J8b5gaqbnkRZMnbiHWmjJheNy8fSrm3znhh8HrD1JT6",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "BgSq5v97BF5WVYByG9H8C15HEvmRLkpkBdZrG5CMQwVQ",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4204000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "9mTZnUvJsUepQpKjFvracMnRD9DwamvEcZ9Dva654y4r",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "G4MDdmDPpQnWFVgMzcyEQfDPonoe6bjaNRBeGHUd6Bar",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4740000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "GLAsLY6YFb1Cb6ZBBHFcPsJzxzKeWoxUQUUB8tDgGS3q",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "AjamdEXjExHJS181nFN83sddXhLrdn1isYXTrViazcHz",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4318000000000,
      "block_time": "2024-08-26T12:02:50Z"
    },
    {
      "signature": "5u2MkL1atE8ZY2XHEE8PJwxnP69mzLSTfaTrnHu6HFt3KgjuEHJADbCR9dn2o7cJDVbDenvY1PrdPTCVfCNSfLEA",
      "source_address": "BhW85ig2dHu5tV6sCs7ps5UyPCLSjfXgEsfVAX82yXnb",
      "program_address": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
      "destination_address": "4HHZV2LRBQD5CJnYgMTzPeKcS2nnTT8szeh2svBWQ89m",
      "source_ata": "DAB1yuYrtCMX8RRsCQkTfAohjBdueQK7sUPcaDudS5dD",
      "destination_ata": "EhTeYCaeFcShDi7cy496Mzcnj24P1TKbbwjDCm6wVk8g",
      "mint_address": "AmeroCaeKg55p6J8d1y2R4t9taqgn3TH4BARgzQJyHvd",
      "slot": 285941932,
      "amount": 4999000000000,
      "block_time": "2024-08-26T12:02:50Z"
    }
  ]
}
